Remplacement des fichiers de configuration Python (settings.py) en fichiers INI (settings.ini), resp. pour les settings de test. Correction des dépendances entre les composants (vigiboard -> vigilo.turbogears -> vigilo.models) et sur les bibliothèques. Réintégration de la configuration de SQLAlchemy dans les fichiers INI de Turbogears. Mise à jour de la configuration du corrélateur à titre d'exemple. La manière de configurer les loggers a RADICALEMENT changée !! Lisez les settings du corrélateur pour un exemple.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1866 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,3 +36,6 @@ input_file = src/vigilo/themes/i18n/theme.pot
 output_dir = src/vigilo/themes/i18n
 previous = true
 
+[bdist_rpm]
+provides = vigilo-themes
+
