--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-extends = ../glue/buildout.cfg
+extends = buildenv/buildout.common.cfg
 eggs += vigilo-themes-default
 
 # vim: set noexpandtab :
