Nouveau système de fonctionnement des tests
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2470 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,10 @@ verbose=True
 verbosity=2
 detailed-errors=1
 with-doctest=True
+with-coverage=True
+cover-package=vigilo.themes
+where=tests
+
 
 # Babel configuration
 [compile_catalog]
