--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
 extends = buildenv/buildout.common.cfg
-eggs += vigilo-themes-default
+name = vigilo-themes-default
 
 # vim: set noexpandtab :
