Mise à jour de la configuration des traductions pour vigilo.themes. Ajout d'une dépendance sur vigilo-common pour pouvoir réutiliser la commande identity_catalog (uniformisation). La dépendance n'est pas nécessaire fonctionnement parlant, mais l'ajouter n'est pas impactant car les applications qui dépendent de vigilo.themes dépendent aussi de vigilo.models qui a déjà cette dépendance. Autant ne pas se priver.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2835 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,6 @@ with-coverage=True
 cover-package=vigilo.themes
 where=tests
 
-
 # Babel configuration
 [compile_catalog]
 domain = theme
@@ -39,6 +38,12 @@ domain = theme
 input_file = src/vigilo/themes/i18n/theme.pot
 output_dir = src/vigilo/themes/i18n
 previous = true
+
+[identity_catalog]
+input_file = src/vigilo/themes/i18n/theme.pot
+output_dir = src/vigilo/themes/i18n
+locale = en
+domain = theme
 
 [bdist_rpm]
 provides = vigilo-themes
