Renommage du fichier de traduction des thèmes en "vigilo-themes" pour plus de cohérence avec les autres composants et pour éviter d'éventuels conflits avec d'autres applis installées sur le système.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2862 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,30 +17,30 @@ where=tests
 
 # Babel configuration
 [compile_catalog]
-domain = theme
+domain = vigilo-themes
 directory = src/vigilo/themes/i18n
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
 msgid_bugs_address = contact@projet-vigilo.org
-output_file = src/vigilo/themes/i18n/theme.pot
+output_file = src/vigilo/themes/i18n/vigilo-themes.pot
 width = 80
 keywords = l_
 
 [init_catalog]
 domain = theme
-input_file = src/vigilo/themes/i18n/theme.pot
+input_file = src/vigilo/themes/i18n/vigilo-themes.pot
 output_dir = src/vigilo/themes/i18n
 
 [update_catalog]
 domain = theme
-input_file = src/vigilo/themes/i18n/theme.pot
+input_file = src/vigilo/themes/i18n/vigilo-themes.pot
 output_dir = src/vigilo/themes/i18n
 previous = true
 
 [identity_catalog]
-input_file = src/vigilo/themes/i18n/theme.pot
+input_file = src/vigilo/themes/i18n/vigilo-themes.pot
 output_dir = src/vigilo/themes/i18n
 locale = en
 domain = theme
