Mise à jour de la configuration des traductions dans vigilo-themes-default.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3511 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,12 +25,12 @@ width = 80
 keywords = l_
 
 [init_catalog]
-domain = theme
+domain = vigilo-themes
 input_file = src/vigilo/themes/i18n/vigilo-themes.pot
 output_dir = src/vigilo/themes/i18n
 
 [update_catalog]
-domain = theme
+domain = vigilo-themes
 input_file = src/vigilo/themes/i18n/vigilo-themes.pot
 output_dir = src/vigilo/themes/i18n
 previous = true
@@ -39,7 +39,7 @@ previous = true
 input_file = src/vigilo/themes/i18n/vigilo-themes.pot
 output_dir = src/vigilo/themes/i18n
 locale = en
-domain = theme
+domain = vigilo-themes
 
 [bdist_rpm]
 provides = vigilo-themes
