Correction des chemins et des options des tests
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@3534 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,12 @@ find_links = http://vigilo-dev.si.c-s.fr/python/eggs
 allow_hosts = *.si.c-s.fr
 
 [nosetests]
-verbose=True
+verbose=1
 verbosity=2
 detailed-errors=1
-with-doctest=True
-with-coverage=True
+with-doctest=1
 cover-package=vigilo.themes
-where=tests
+tests=tests
 
 # Babel configuration
 [compile_catalog]
