--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include src/vigilo/themes/i18n *
 recursive-include src/vigilo/themes/public *
 recursive-include src/vigilo/themes/templates *
+recursive-include buildenv Makefile.common buildout.*.cfg
