MAJ des MANIFEST.in
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6704 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include src/vigilo/themes/i18n *
 recursive-include src/vigilo/themes/public *
 recursive-include src/vigilo/themes/templates *
-recursive-include buildenv Makefile.common buildout.*.cfg
+include buildenv/Makefile.common
+include buildenv/buildout.*.cfg
