Mise à jour des fichiers MANIFEST.in
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6781 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,13 @@ recursive-include src/vigilo/themes/public *
 recursive-include src/vigilo/themes/templates *
 include buildenv/Makefile.common
 include buildenv/buildout.*.cfg
+include buildout.cfg
+include Makefile
+include COPYING.txt
+
+graft doc
+graft pkg
+recursive-include i18n *.pot *.po
+
+include jsl.cfg
+include babeljs.py
