--- a/jsl.cfg
+++ b/jsl.cfg
@@ -8,5 +8,4 @@
 # To add a set of files, use "+process FileName", "+process Folder\Path\*.js",
 # or "+process Folder\Path\*.htm".
 #
-+process ./src/vigilo/themes/public/vigigraph/js/*.js
-+process ./src/vigilo/themes/public/vigimap/js/*.js
++process ./src/vigilo/themes/public/*/js/*.js
