Correction du jslint
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@7078 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/jsl.cfg
+++ b/jsl.cfg
@@ -8,4 +8,6 @@
 # To add a set of files, use "+process FileName", "+process Folder\Path\*.js",
 # or "+process Folder\Path\*.htm".
 #
-+process ./src/vigilo/themes/public/*/js/*.js
++process ./src/vigilo/themes/public/common/js/*.js
++process ./src/vigilo/themes/public/vigigraph/js/*.js
++process ./src/vigilo/themes/public/vigimap/js/*.js
