Liens vers les cartes dans VigiBoard (#959).
Ajoute des liens vers les cartes sur lesquelles l'hôte concerné par un
événement apparaît dans le dialogue de détail d'un l'événement corrélé.

L'URL de base de VigiMap doit être renseignée dans le fichier de
configuration de VigiBoard pour que ceci fonctionne. La configuration de
l'URL se fait grâce à l'option de configuration "interfaces.vigimap" (le
nom est le même que celui attendu par VigiAdmin).

Le nombre de liens pouvant apparaître est configurable grâce à l'option
"max_maps" avec 2 valeurs particulières :
* -1 inhibe toute limite (ie. affiche toutes les cartes)
* 0 désactive la fonctionnalité (ie. n'affiche aucune carte, ni même la
  partie réservée à l'affichage des liens dans la boîte de dialogue)
Si le nombre de cartes disponibles est supérieur à la limite définie et
que le mécanisme d'affiche des liens est activé, un message avertit en
plus l'utilisateur.

Ajoute des tests sur cette nouvelle fonctionnalité.
De plus, le code !JavaScript du module "details" a été externalisé afin
de faciliter la lecture du fichier .html du module.

Enfin, le comportement d'ouverture des liens (ex: dans l'onglet courant
ou dans un nouvel onglet) est configurable grâce à l'option
"links_target" (il s'agit du même nom d'option que dans VigiAdmin).

Change-Id: I0d1b73fc4e9e7caf36e10a87bc3e0ae3d8972d88
Refs: #959.
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/690
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Aurelien BOMPARD <aurelien.bompard@c-s.fr>

--- a/jsl.cfg
+++ b/jsl.cfg
@@ -11,3 +11,4 @@
 +process ./src/vigilo/themes/public/common/js/*.js
 +process ./src/vigilo/themes/public/vigigraph/js/*.js
 +process ./src/vigilo/themes/public/vigimap/js/*.js
++process ./src/vigilo/themes/public/vigiboard/js/plugins/details.js
