Ajout fichier .gitignore
Change-Id: Id265b8af42a23e14889eb309b0b0c61fcac6b2b2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-src/vigilo/themes/i18n/*.pot
-src/vigilo/themes/i18n/*/LC_MESSAGES/*.mo
-src/vigilo/themes/i18n/*/LC_MESSAGES/*.js
+*.pyc
+*.pyo
+*.egg-info
+*~
+*.swp
+.directory
+*,cover
+
+.coverage
+develop-eggs/
+extend-develop/
+parts/
+eggs/
+*-log.txt
+.installed.cfg
+bin/
+build/
+dist/
+.pydevproject
+.pydevproject.bak
+.project
+.settings
+.noseids
+doc/apidoc/
+doc/_build/
+doc/coverage/
+i18n/*/LC_MESSAGES/*.mo
+i18n/*/LC_MESSAGES/*.js
+src/twisted/plugins/dropin.cache
+
