--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ msgid_bugs_address = contact.vigilo@c-s.fr
 output_file = src/vigilo/themes/i18n/vigilo-themes.pot
 width = 80
 keywords = l_
+input_paths = src
 
 [init_catalog]
 domain = vigilo-themes
