Meilleure compatibilité pour Babel
Change-Id: I9a6cba5511fc6c0415d175594dc998d484ecbeb8

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ msgid_bugs_address = contact.vigilo@c-s.fr
 output_file = src/vigilo/themes/i18n/vigilo-themes.pot
 width = 80
 keywords = l_
-input_paths = src
+input_dirs = src
 
 [init_catalog]
 domain = vigilo-themes
