Suppression du buildenv et des fichiers associés
Change-Id: I14f8bda8ebf87acd15830ad06479560e15041419

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,6 @@
+include COPYING.txt
+include README.txt
+
 recursive-include src/vigilo/themes/i18n *
 recursive-include src/vigilo/themes/public *
 recursive-include src/vigilo/themes/templates *
-include buildenv/Makefile.common
-include buildenv/buildout.*.cfg
-include buildenv/*.py
-include buildout.cfg
-include Makefile
-include COPYING.txt
-
-graft doc
-graft pkg
-graft debian
-
-include jsl.cfg
